--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Mein erstes HTML-Dokument</title>
-  <!-- <link href="css/stylesheet.css" rel="stylesheet" type="text/css" /> -->
+  <title>Mein Lebenslauf</title>
+  <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
   <!-- Headlines -->
 
-  <h1>Meine Headline</h1>
-  <h2>Meine Headline</h2>
+  <h1>Lebenslauf</h1>
+
+  <h2>Persönliche Daten</h2>
+  <ul>
+    <li>Melanie Glück</li>
+    <li>geb. 02.10.1993 in Schwedt</li>
+    <li>Lehrterstraße 68, 10557 Berlin</li>
+  </ul>
+  <h2>Schulbildung</h2>
+  <ul>
+    <li>2000 - 2002   Grundschule "Am Waldrand" in Schwedt</li>
+    <li>2002 - 2004   Grundschule "Berthold Brecht" in Schwedt</li>
+    <li>2004 - 2012   "Carl-Friedrich Gauß Gymnasium" in Schwedt</li>
+    <li>15.06.2012    Abitur</li>
+  </ul>
+  <h2>Praktische Erfahrung</h2>
+  <ul>
+    <li>2010 - 2012   Aushilfe in Thalia</li>
+    <li>2012 - 2013   Praktikum AkoTec Produktionsgesellschaft mbH</li>
+    <li>2013 - 2016   Ausbildung zur Kauffrau für Marketingkommunikation</li>
+    <li>2016          5 wöchiges Praktikum bei Island Properties auf Malta</li>
+  </ul>
   <h3>Meine Headline</h3>
   <h4>Meine Headline</h4>
   <h5>Meine Headline</h5>
@@ -21,13 +41,7 @@
 
   <!-- Lists -->
 
-  <ul>
-    <li>Milch</li>
-    <li>Butter</li>
-    <li>Zucker</li>
-    <li>Brötchen</li>
-    <li>Haferflocken</li>
-  </ul>
+
 
   <ol>
     <li>Eins</li>
