--- a/Portfolio/App_Design.html
+++ b/Portfolio/App_Design.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
+
+<!--
 <html>
 
   <head>
@@ -15,3 +15,60 @@
 
   </body>
 </html>
+-->
+<!DOCTYPE html>
+<html>
+<body>
+
+  <div class="foto" id="home_foto">
+    <img id="logo" class="icons_pics" src="/Users/Melanie/Sites/Melanie.github.io/Portfolio/Bilder/icons/MG_logo.png"></a>
+
+    <div id="about" class="text">
+    <h1 id="about_headline">about</h1>
+    <p>
+    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
+    </p>
+    </div>
+
+<link href="css/app.css" rel="stylesheet" type="text/css" />
+  <h1>To-do-Liste</h1>
+
+<div class="wrapper">
+
+  <div class="box">
+    <img src="http://placehold.it/350x350">
+  </div>
+
+  <div class="box">
+    <img src="http://placehold.it/350x350">
+  </div>
+
+  <div class="box">
+    <img src="http://placehold.it/350x350">
+  </div>
+  <div class="box">
+    <img src="http://placehold.it/350x350">
+  </div>
+
+  <div class="box">
+    <img src="http://placehold.it/350x350">
+  </div>
+
+  <div class="box">
+    <img src="http://placehold.it/350x350">
+  </div>
+  <div class="box">
+    <img src="http://placehold.it/350x350">
+  </div>
+
+  <div class="box">
+    <img src="http://placehold.it/350x350">
+  </div>
+
+  <div class="box">
+    <img src="http://placehold.it/350x350">
+  </div>
+</div>
+
+</html>
+</body>
