App page Bilder eingefügt

--- a/Portfolio/App_Design.html
+++ b/Portfolio/App_Design.html
@@ -18,57 +18,68 @@
 -->
 <!DOCTYPE html>
 <html>
+<link href="css/app.css" rel="stylesheet" type="text/css" />
 <body>
 
   <div class="foto" id="home_foto">
-    <img id="logo" class="icons_pics" src="/Users/Melanie/Sites/Melanie.github.io/Portfolio/Bilder/icons/MG_logo.png"></a>
+    <a href="Startseite.html"><img id="logo" class="icons_pics" src="/Users/Melanie/Sites/Melanie.github.io/Portfolio/Bilder/icons/MG_logo.png"></a>
+
+    <nav id="navigation">
+      <ul>
+        <li class="navigation_liste"><a href="Startseite.html">home</a></li>
+        <li class="navigation_liste"><a href="Startseite.html">about</a></li>
+        <li class="navigation_liste"><strong>portfolio</strong></a></li>
+        <li class="navigation_liste"><a href="Startseite.html">contact</a></li>
+      </ul>
+    </nav>
+    </div>
+
 
     <div id="about" class="text">
-    <h1 id="about_headline">about</h1>
+    <h1 id="app_headline">App</h1>
     <p>
-    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
+    Im Rahmen des Kurses Digitaler Medien sollten wir in Gruppen ein Screendesign einer To do-Listen App erstellen und diese prototypen. Das ist dabei rausgekommen!
     </p>
     </div>
 
-<link href="css/app.css" rel="stylesheet" type="text/css" />
-  <h1>To-do-Liste</h1>
 
 <div class="wrapper">
 
   <div class="box">
-    <img src="http://placehold.it/350x350">
+    <img src="Bilder/app_design/Start.png">
+  </div>
+
+    <div class="box">
+      <img src="Bilder/app_design/Heute.png">
+    </div>
+
+    <div class="box">
+      <img src="Bilder/app_design/Detailansicht.png">
+    </div>
+
+  <div class="box">
+    <img src="Bilder/app_design/Details.png">
   </div>
 
   <div class="box">
-    <img src="http://placehold.it/350x350">
+    <img src="Bilder/app_design/Suchen.png">
   </div>
 
   <div class="box">
-    <img src="http://placehold.it/350x350">
-  </div>
-  <div class="box">
-    <img src="http://placehold.it/350x350">
+    <img src="Bilder/app_design/plus.png">
   </div>
 
   <div class="box">
-    <img src="http://placehold.it/350x350">
+    <img src="Bilder/app_design/Kalender.png">
   </div>
 
   <div class="box">
-    <img src="http://placehold.it/350x350">
-  </div>
-  <div class="box">
-    <img src="http://placehold.it/350x350">
+    <img src="Bilder/app_design/Kontakte.png">
   </div>
 
   <div class="box">
-    <img src="http://placehold.it/350x350">
+    <img src="Bilder/app_design/Maria.png">
   </div>
-
-  <div class="box">
-    <img src="http://placehold.it/350x350">
-  </div>
-</div>
 
 </html>
 </body>
