--- a/Portfolio/Startseite.html
+++ b/Portfolio/Startseite.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <!--                              HomeFoto                                -->
+  <!--                              Logo                                -->
   <div class="foto" id="home_foto">
     <img id="logo" class="icons_pics" src="/Users/Melanie/Sites/Melanie.github.io/Portfolio/Bilder/icons/MG_logo.png"></a>
 
@@ -46,9 +46,6 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
         <li id="apps" class="icons_liste"><a href="App_Design.html"><img class="icons_pics" src="/Users/Melanie/Sites/Melanie.github.io/Portfolio/Bilder/icons/apps.png"></a></li>
       </ul>
     </nav>
-      <!-- <div class="button_container">
-         <p class="button_schrift" >view all</p>
-      </div> -->
   </div>
 
 <!--                                Foto2                                   -->
