--- a/Portfolio/App_Design.html
+++ b/Portfolio/App_Design.html
@@ -1,24 +1,6 @@
-
-<!--
-<html>
-
-  <head>
-    <meta charset="utf-8">
-    <title>App Design</title>
-  </head>
-
-  <h1>To do</h1>
-  <p> Im Rahmen des Bereichs Digitaler Medien sollten wir ein Design für eine To do-Listen App erstellen und diese mit einem Prototyping-Tool zu einem funktionsfähigem Prototype entwickeln. Und das ist dabei rausgekommen!:
-  </p>
-
-  <body>
-
-  </body>
-</html>
--->
 <!DOCTYPE html>
 <html>
-<link href="css/app.css" rel="stylesheet" type="text/css" />
+<link href="css/portfolio.css" rel="stylesheet" type="text/css" />
 <body>
 
   <div class="foto" id="home_foto">
@@ -32,22 +14,22 @@
         <li class="navigation_liste"><a href="Startseite.html">contact</a></li>
       </ul>
     </nav>
-    </div>
+  </div>
 
 
-    <div id="about" class="text">
-    <h1 id="app_headline">App</h1>
+  <div id="about" class="text">
+    <h1 id="app_headline">App-Design</h1>
     <p>
     Im Rahmen des Kurses Digitaler Medien sollten wir in Gruppen ein Screendesign einer To do-Listen App erstellen und diese prototypen. Das ist dabei rausgekommen!
     </p>
-    </div>
-
-
-<div class="wrapper">
-
-  <div class="box">
-    <img src="Bilder/app_design/Start.png">
   </div>
+
+
+  <div class="wrapper">
+
+    <div class="box">
+      <img src="Bilder/app_design/Start.png">
+    </div>
 
     <div class="box">
       <img src="Bilder/app_design/Heute.png">
@@ -57,28 +39,30 @@
       <img src="Bilder/app_design/Detailansicht.png">
     </div>
 
-  <div class="box">
-    <img src="Bilder/app_design/Details.png">
-  </div>
+    <div class="box">
+      <img src="Bilder/app_design/Details.png">
+    </div>
 
-  <div class="box">
-    <img src="Bilder/app_design/Suchen.png">
-  </div>
+    <div class="box">
+      <img src="Bilder/app_design/Suchen.png">
+    </div>
 
-  <div class="box">
-    <img src="Bilder/app_design/plus.png">
-  </div>
+    <div class="box">
+      <img src="Bilder/app_design/plus.png">
+    </div>
 
-  <div class="box">
-    <img src="Bilder/app_design/Kalender.png">
-  </div>
+    <div class="box">
+      <img src="Bilder/app_design/Kalender.png">
+    </div>
 
-  <div class="box">
-    <img src="Bilder/app_design/Kontakte.png">
-  </div>
+    <div class="box">
+      <img src="Bilder/app_design/Kontakte.png">
+    </div>
 
-  <div class="box">
-    <img src="Bilder/app_design/Maria.png">
+    <div class="box">
+      <img src="Bilder/app_design/Maria.png">
+    </div>
+
   </div>
 
 </html>
