--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!--                              Logo                                -->
   <div class="foto" id="home_foto">
-    <img id="logo" class="icons_pics" src="/Users/Melanie/Sites/Melanie.github.io/Portfolio/Bilder/icons/MG_logo.png"></a>
+    <img id="logo" class="icons_pics" src="/Users/Melanie/Sites/Melanie.githubnew.io/Bilder/icons/MG_logo.png"></a>
 
     <!--                           Navigation                               -->
   <nav id="navigation">
@@ -42,11 +42,11 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
     <h1 id="portfolio_headline">portfolio</h1>
     <nav id="icons_navigation">
       <ul>
-        <li class="icons_liste"><a href="Photos.html"><img class="icons_pics" src="/Users/Melanie/Sites/Melanie.github.io/Portfolio/Bilder/icons/photos.png"></a></li>
-        <li id="apps" class="icons_liste"><a href="App_Design.html"><img class="icons_pics" src="/Users/Melanie/Sites/Melanie.github.io/Portfolio/Bilder/icons/apps.png"></a></li>
+        <li class="icons_liste"><a href="Photos.html"><img class="icons_pics" src="/Users/Melanie/Sites/Melanie.githubnew.io/Bilder/icons/photos.png"></a></li>
+        <li id="apps" class="icons_liste"><a href="App_Design.html"><img class="icons_pics" src="/Users/Melanie/Sites/Melanie.githubnew.io/Bilder/icons/apps.png"></a></li>
       </ul>
     </nav>
-    
+
   </div>
 
 <!--                                Foto2                                   -->
