app Seite Änderung

--- a/App_Design.html
+++ b/App_Design.html
@@ -4,7 +4,7 @@
 <body>
 
   <div class="foto" id="home_foto">
-    <a href="Startseite.html"><img id="logo" class="icons_pics" src="/Users/Melanie/Sites/Melanie.github.io/Portfolio/Bilder/icons/MG_logo.png"></a>
+    <a href="Startseite.html"><img id="logo" class="icons_pics" src="Bilder/icons/MG_logo.png"></a>
 
     <nav id="navigation">
       <ul>
