--- a/Photos.html
+++ b/Photos.html
@@ -4,18 +4,17 @@
 <body>
 
   <div class="foto" id="home_foto">
-    <a href="Startseite.html"><img id="logo" class="icons_pics" src="/Users/Melanie/Sites/Melanie.github.io/Portfolio/Bilder/icons/MG_logo.png"></a>
+    <a href="index.html"><img id="logo" class="icons_pics" src="Bilder/icons/MG_logo.png"></a>
 
     <nav id="navigation">
       <ul>
-        <li class="navigation_liste"><a href="Startseite.html">home</a></li>
-        <li class="navigation_liste"><a href="Startseite.html">about</a></li>
+        <li class="navigation_liste"><a href="index.html">home</a></li>
+        <li class="navigation_liste"><a href="index.html">about</a></li>
         <li class="navigation_liste"><strong>portfolio</strong></a></li>
-        <li class="navigation_liste"><a href="Startseite.html">contact</a></li>
+        <li class="navigation_liste"><a href="index.html">contact</a></li>
       </ul>
     </nav>
     </div>
-
 
     <div id="about" class="text">
       <h1 id="photos_headline">Photos</h1>
