--- a/App_Design.html
+++ b/App_Design.html
@@ -4,14 +4,14 @@
 <body>
 
   <div class="foto" id="home_foto">
-    <a href="Startseite.html"><img id="logo" class="icons_pics" src="Bilder/icons/MG_logo.png"></a>
+    <a href="index.html"><img id="logo" class="icons_pics" src="Bilder/icons/MG_logo.png"></a>
 
     <nav id="navigation">
       <ul>
-        <li class="navigation_liste"><a href="Startseite.html">home</a></li>
-        <li class="navigation_liste"><a href="Startseite.html">about</a></li>
+        <li class="navigation_liste"><a href="index.html">home</a></li>
+        <li class="navigation_liste"><a href="index.html">about</a></li>
         <li class="navigation_liste"><strong>portfolio</strong></a></li>
-        <li class="navigation_liste"><a href="Startseite.html">contact</a></li>
+        <li class="navigation_liste"><a href="index.html">contact</a></li>
       </ul>
     </nav>
   </div>
