--- a/App_Design.html
+++ b/App_Design.html
@@ -27,7 +27,7 @@
 
   <div class="wrapper">
 
-    <div class="box">
+    <div id="hover_photo"class="box">
       <img src="Bilder/app_design/Start.png">
     </div>
 
@@ -59,9 +59,6 @@
       <img src="Bilder/app_design/Kontakte.png">
     </div>
 
-    <div class="box">
-      <img src="Bilder/app_design/Maria.png">
-    </div>
 
   </div>
 
